--- a/About.html
+++ b/About.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin Rosenthal - Resume</title>
-    <!-- Fixed CSS path -->
+    <!--CSS path -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Consolidated font imports -->
+    <!-- font imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&family=Zilla+Slab:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation Bar -->
+    <!-- Nav Bar-->
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="About.html">About</a>
-            <a href="Projects.html">Projects</a>
-            <a href="Contact.html">Contact</a>
+            <a href="AustinRosenthal/index.html">Home</a>
+            <a href="AustinRosenthal/About.html">About</a>
+            <a href="AustinRosenthal/Projects.html">Projects</a>
+            <a href="AustinRosenthal/Contact.html">Contact</a>
         </nav>
         <div class="nav-accent"></div>
     </header>
@@ -31,8 +31,9 @@
             <div class="title-divider"></div>
             <h2 class="name_title_sub">Resume</h2>
             <p class="resume_desc">As a CompTIA A+ certified IT professional with hands-on experience in hardware engineering and system administration, I combine technical expertise with exceptional customer service skills developed in high-pressure environments.
-              My practical programming knowledge in HTML, CSS, and Python is demonstrated through projects like this custom-built website, while my proficiency with professional software ecosystems showcases my versatility.
-              Currently advancing my technical credentials with upcoming Network+ and SSCP certifications, I bring a proven ability to troubleshoot complex systems alongside strong collaboration capabilities that make me immediately valuable to your team.
+              My practical programming knowledge in HTML, CSS, and Python is demonstrated through projects like this website, while my proficiency with professional software showcases my versatility.
+              Currently advancing my technical credentials with upcoming Network+ and SSCP certifications.
+              I bring a proven ability to troubleshoot systems in company with my strong collaboration capabilities that make me instantly valuable to your team.
             </p>
         </div>
 
@@ -47,7 +48,7 @@
                         <span class="title-left">Lead Trainer</span>
                         <span class="title-right">February 2024 - Present</span>
                     </h3>
-                    <p class="job_desc"> Curated and published compelling weekly social media content to enhance brand visibility and client engagement.
+                    <p class="job_desc">Curated published compelling weekly social media content to enhance brand visibility and client engagement.
                       Executed comprehensive database management by standardizing client profiles, rectifying inconsistencies across multiple platforms, and optimizing the synchronization between Customer Relationship Management and scheduling systems.
                       Maintained sophisticated studio equipment including BioCharger technology running on Linux Tux and Spectrum Loading Machines operating on Windows 10 platforms.
                       Generated client acquisition through strategic cold outreach, conducted persuasive trial sessions, and demonstrated exceptional conversion rates through effective sales presentations.
@@ -61,7 +62,7 @@
                         <span class="title-left">EMS Certified Personal Trainer</span>
                         <span class="title-right">June 2021- July 2023</span>
                     </h3>
-                    <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regimens.
+                    <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regiments.
                       Performed maintenance and troubleshooting of WeimsPro Electric Magnetic Stimulation (EMS) full-body suits, including internal wiring replacement, electrode pad installation, and diagnostics to ensure optimal functionality.
                       Consistently achieved monthly sales bonus targets during the initial six-month employment period, demonstrating superior client acquisition and retention abilities.
                       Executed effective cold outreach, culminating in high-conversion trial sessions and successful membership closings.
@@ -104,7 +105,7 @@
                         <span class="title-left">Event Staff</span>
                         <span class="title-right">2013 - 2016</span>
                     </h3>
-                    <p class="job_desc">Orchestrated seamless execution of social gatherings including weddings, birthdays, and Bar/Bat Mitzvahs through meticulous venue preparation and strategic breakdown procedures.
+                    <p class="job_desc">Orchestrated seamless execution of social gatherings including weddings, birthdays, and Bar/Bat Mitzvahs and corporate events through meticulous venue preparation and strategic breakdown procedures.
                       Demonstrated versatility by fulfilling multiple hospitality roles including service staff, mixology, and station management as dictated by event requirements.
                       Ensured impeccable event flow through proactive problem resolution and attentive guest service, maintaining the client's vision throughout each function.
                     </p>
@@ -146,7 +147,7 @@
             <p><strong>Customer Experience Excellence: </strong> Distinguished customer service background initiated at a Michelin-starred establishment, developing exceptional interpersonal communication skills, conflict resolution abilities, and attention to detail in high-pressure environments.</p>
             <p><strong>Hardware Engineering: </strong> Demonstrated technical expertise in computer hardware assembly and configuration, having successfully built and deployed nine custom computing systems ranging from Small Form Factor to Full Tower configurations, including comprehensive component selection, BIOS configuration, and operating system implementation.</p>
             <p><strong>System Administration: </strong> Proficient in Mac and Windows operating systems, including advanced troubleshooting, system maintenance protocols, and hardware diagnostic procedures.</p>
-            <p><strong>Productivity & Collaboration: </strong> Comprehensive knowledge of Microsoft Office Suite and Google Workspace environments, facilitating efficient documentation, project management, and team collaboration capabilities.</p>
+            <p><strong>Productivity & Collaboration: </strong> Comprehensive knowledge of Microsoft Office Suite and Google Workspace environments, facilitating efficient documentation, project management, and team collaboration. </p>
           </div>
         </div>
 
