--- a/Contact.html
+++ b/Contact.html
@@ -25,10 +25,10 @@
     <section id="contact" class="section">
         <div class="hero">
             <!-- Main Contact Box -->
-            <div class="content-box">
-              <h1 class="name_title">Austin Rosenthal</h1>
-              <h2 class="subtitle">Contact Information</h2>
-              <p class="contact-info">
+            <div class="AustinRosenthal/content-box">
+              <h1 class="AustinRosenthal/name_title">Austin Rosenthal</h1>
+              <h2 class="AustinRosenthal/subtitle">Contact Information</h2>
+              <p class="AustinRosenthal/contact-info">
               Email: AustinLRosenthal@gmail.com
               </p>
               <p class="contact-info">
