--- a/Projects.html
+++ b/Projects.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="AustinRosenthal/index.html">Home</a>
+        <a href="AustinRosenthal/about.html">About</a>
+        <a href="AustinRosenthal/projects.html">Projects</a>
+        <a href="AustinRosenthal/contact.html">Contact</a>
     </nav>
 
     <section id="projects" class="section">
