--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin Rosenthal - Web Developer</title>
-    <!-- Simplified CSS link -->
+    <!--CSS link -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Consolidated font imports -->
+    <!--font imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&family=Zilla+Slab:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation Bar -->
+    <!-- Nav Bar -->
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="AustinRosenthal/index.html">Home</a>
+        <a href="AustinRosenthal/about.html">About</a>
+        <a href="AustinRosenthal/projects.html">Projects</a>
+        <a href="AustinRosenthal/contact.html">Contact</a>
     </nav>
     <div class="nav-accent"></div>
 
@@ -30,24 +30,24 @@
                 <h2 class="subtitle">Web Developer Resume & Portfolio</h2>
                 <p class="welcome_text">Welcome to my Website!
                   I've created this space to showcase my journey and growing expertise as I transition into the technology field.
-                   My recent CompTIA A+ certification (2023) marks the beginning of this exciting path and demonstrates my ability to solve complex technical problems with confidence.
+                  My recent CompTIA A+ certification (2023) marks the beginning of this exciting path and demonstrates my ability to solve complex technical problems with confidence.
                 </p>
                 <p>This website itself represents my hands-on approach to learning—I built it from scratch using HTML and CSS as a practical project to strengthen my coding skills.
-                   Working through each element and styling challenge has been both educational and rewarding.
+                  Working through each element and styling challenge has been both educational and rewarding.
                 </p>
                 <p>My learning journey continues with preparation for my CompTIA Network+ certification, which I'm scheduled to complete in late April 2025.
-                   Following that milestone, I'll be pursuing the ISP2 System Security Certified Practitioner (SSCP) certification in the summer of 2025, reflecting my commitment to cybersecurity best practices.
+                  Following that milestone, I'll be pursuing the ISP2 System Security Certified Practitioner (SSCP) certification in the summer of 2025, reflecting my commitment to cybersecurity best practices.
                 </p>
-                <p>Beyond certifications, I'm developing my programming capabilities with beginner-level Python, HTML, and CSS.
-                   I'm enthusiastic about deepening my knowledge in these languages while expanding my toolkit to include JavaScript and C# in the near future.
+                <p>Beyond certifications, I'm developing my programming capabilities with Python, HTML, and CSS.
+                  I'm enthusiastic about deepening my knowledge in these technologies while expanding my toolkit to include languages like JavaScript and C# in the near future.
                 </p>
                 <p>I believe in continuous growth and am passionate about applying these emerging skills to create innovative solutions.
-                   Feel free to explore my projects and follow my progress as I build my career in technology!
+                  Feel free to explore my projects and follow my progress as I build my career in technology!
                 </p>
             </div>
         </div>
     </section>
 
-    <!-- Footer could be added here if needed -->
+    <!-- Footer could be added here -->
 </body>
 </html>
