Added "/" to Nav bar selection in hopes the links work

--- a/About.html
+++ b/About.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin Rosenthal - Resume</title>
-    <!-- Fixed CSS path -->
+    <!-- CSS path -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Consolidated font imports -->
+    <!-- Font imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&family=Zilla+Slab:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -15,10 +15,10 @@
     <!-- Navigation Bar -->
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="About.html">About</a>
-            <a href="Projects.html">Projects</a>
-            <a href="Contact.html">Contact</a>
+            <a href="/index.html">Home</a>
+            <a href="/About.html">About</a>
+            <a href="/Projects.html">Projects</a>
+            <a href="/Contact.html">Contact</a>
         </nav>
         <div class="nav-accent"></div>
     </header>
