--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin Rosenthal - Web Developer</title>
-    <!-- Simplified CSS link -->
+    <!-- CSS link -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Consolidated font imports -->
+    <!-- Font imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&family=Zilla+Slab:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -14,10 +14,10 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
+        <a href="/index.html">Home</a>
+        <a href="/About.html">About</a>
+        <a href="/Projects.html">Projects</a>
+        <a href="/Contact.html">Contact</a>
     </nav>
     <div class="nav-accent"></div>
 
