Revisited Home and About content
-Fixed the Home page description
-Fixed the Resume introduction
-Fixed the Job Descriptions

--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="/index.html">Home</a>
             <a href="/About.html">About</a>
-            <a href="/Projects.html">Projects</a>
+            <!--<a href="/Projects.html">Projects</a> Add in the projects tab first -->
             <a href="/Contact.html">Contact</a>
         </nav>
         <div class="nav-accent"></div>
@@ -30,10 +30,7 @@
             <h1 class="name_title">Austin Rosenthal</h1>
             <div class="title-divider"></div>
             <h2 class="name_title_sub">Resume</h2>
-            <p class="resume_desc">As a CompTIA A+ certified IT professional with hands-on experience in hardware engineering and system administration, I combine technical expertise with exceptional customer service skills developed in high-pressure environments.
-              My practical programming knowledge in HTML, CSS, and Python is demonstrated through projects like this custom-built website, while my proficiency with professional software ecosystems showcases my versatility.
-              Currently advancing my technical credentials with upcoming Network+ and SSCP certifications, I bring a proven ability to troubleshoot complex systems alongside strong collaboration capabilities that make me immediately valuable to your team.
-            </p>
+            <p class="resume_desc">As a CompTIA A+ certified IT professional with hands-on experience in hardware engineering and system administration, I combine technical expertise with exceptional customer service skills developed in high-pressure environments. My practical programming knowledge in HTML, CSS, and Python is demonstrated through projects like this website, while my proficiency with professional software showcases my versatility. Currently advancing my technical credentials with upcoming Network+ and SSCP certifications.  I bring a proven ability to troubleshoot systems in company with my strong collaboration capabilities that make me instantly valuable to your team.</p>
         </div>
 
         <!-- Work History Section -->
@@ -47,11 +44,7 @@
                         <span class="title-left">Lead Trainer</span>
                         <span class="title-right">February 2024 - Present</span>
                     </h3>
-                    <p class="job_desc"> Curated and published compelling weekly social media content to enhance brand visibility and client engagement.
-                      Executed comprehensive database management by standardizing client profiles, rectifying inconsistencies across multiple platforms, and optimizing the synchronization between Customer Relationship Management and scheduling systems.
-                      Maintained sophisticated studio equipment including BioCharger technology running on Linux Tux and Spectrum Loading Machines operating on Windows 10 platforms.
-                      Generated client acquisition through strategic cold outreach, conducted persuasive trial sessions, and demonstrated exceptional conversion rates through effective sales presentations.
-                    </p>
+                    <p class="job_desc"> Curated published compelling weekly social media content to enhance brand visibility and client engagement. Executed comprehensive database management by standardizing client profiles, rectifying inconsistencies across multiple platforms, and optimizing the synchronization between Customer Relationship Management and scheduling systems. Maintained sophisticated studio equipment including BioCharger technology running on Linux Tux and Spectrum Loading Machines operating on Windows 10 platforms. Generated client acquisition through strategic cold outreach, conducted persuasive trial sessions, and demonstrated exceptional conversion rates through effective sales presentations.</p>
                 </div>
 
                 <!-- Job 2 -->
@@ -61,11 +54,7 @@
                         <span class="title-left">EMS Certified Personal Trainer</span>
                         <span class="title-right">June 2021- July 2023</span>
                     </h3>
-                    <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regimens.
-                      Performed maintenance and troubleshooting of WeimsPro Electric Magnetic Stimulation (EMS) full-body suits, including internal wiring replacement, electrode pad installation, and diagnostics to ensure optimal functionality.
-                      Consistently achieved monthly sales bonus targets during the initial six-month employment period, demonstrating superior client acquisition and retention abilities.
-                      Executed effective cold outreach, culminating in high-conversion trial sessions and successful membership closings.
-                    </p>
+                    <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regiments. Performed maintenance and troubleshooting of WeimsPro Electric Magnetic Stimulation (EMS) full-body suits, including internal wiring replacement, electrode pad installation, and diagnostics to ensure optimal functionality. Consistently achieved monthly sales bonus targets during the initial six-month employment period, demonstrating superior client acquisition and retention abilities. Executed effective cold outreach, culminating in high-conversion trial sessions and successful membership closings.</p>
                 </div>
 
                 <!-- Job 3 -->
@@ -75,11 +64,7 @@
                         <span class="title-left">Certified Personal Trainer</span>
                         <span class="title-right">August 2015 – August 2023</span>
                     </h3>
-                    <p class="job_desc">Functioned as a mobile fitness professional, transporting comprehensive equipment inventories to client-convenient locations while maintaining workout quality and professional standards.
-                      Developed and implemented comprehensive, training programs tailored to individual client objectives, with specializations in hypertrophy, athletic performance, and strength conditioning.
-                      Cultivated an extensive client network primarily through referral-based marketing, maintaining high retention rates with 2-4 weekly sessions per client.Designed strategic session packages with competitive pricing structures to maximize client retention and program adherence.
-                      Educated clients on exercise biomechanics, nutritional science principles, and injury prevention protocols to promote sustainable fitness outcomes.
-                    </p>
+                    <p class="job_desc">Functioned as a mobile fitness professional, transporting equipment inventories to client-convenient locations while maintaining workout quality and professional standards. Developed and implemented comprehensive, training programs tailored to individual client objectives, with specializations in hypertrophy, athletic performance, and strength conditioning. Cultivated an extensive client network primarily through referral-based marketing, maintaining high retention rates with 2-4 weekly sessions per client.  Designed strategic session packages with competitive pricing structures to maximize client retention and program adherence. Educated clients on exercise biomechanics, nutritional science principles, and injury prevention protocols to promote sustainable fitness outcomes.</p>
                 </div>
 
                 <!-- Job 4 -->
@@ -89,12 +74,7 @@
                         <span class="title-left">Project Manager</span>
                         <span class="title-right">October 2020 - April 2022</span>
                     </h3>
-                    <p class="job_desc">Progressed from entry-level labor position to project oversight role through demonstrated proficiency and leadership capabilities.
-                      Instituted formalized documentation processes including detailed bidding systems, comprehensive project timelines, and material requisition protocols to enhance operational efficiency.
-                      Developed competitive written proposals that effectively secured new business opportunities while accurately representing project parameters and deliverables.
-                      Created strategic project schedules that optimized resource allocation and facilitated concurrent task execution, significantly improving completion timeframes.
-                      Assumed management responsibility for small-scale projects as the company's capacity expanded.
-                    </p>
+                    <p class="job_desc">Progressed from entry-level labor position to project oversight manager  role through proficiency and leadership capabilities. Instituted formalized documentation processes including detailed bidding systems, comprehensive project timelines, and material job costing and requisition protocols to enhance operational efficiency. Developed competitive written proposals that effectively secured new business opportunities while accurately representing project parameters and deliverables. Created strategic project schedules that optimized resource allocation and facilitated concurrent task execution, significantly improving completion timeframes. Assumed management responsibility for small-scale projects as the company's capacity expanded.</p>
                 </div>
 
                 <!-- Job 5 -->
@@ -104,10 +84,7 @@
                         <span class="title-left">Event Staff</span>
                         <span class="title-right">2013 - 2016</span>
                     </h3>
-                    <p class="job_desc">Orchestrated seamless execution of social gatherings including weddings, birthdays, and Bar/Bat Mitzvahs through meticulous venue preparation and strategic breakdown procedures.
-                      Demonstrated versatility by fulfilling multiple hospitality roles including service staff, mixology, and station management as dictated by event requirements.
-                      Ensured impeccable event flow through proactive problem resolution and attentive guest service, maintaining the client's vision throughout each function.
-                    </p>
+                    <p class="job_desc">Orchestrated seamless execution of social gatherings including weddings, birthdays, and Bar/Bat Mitzvahs and corporate events through meticulous venue preparation and strategic breakdown procedures. Demonstrated versatility by fulfilling multiple hospitality roles including service staff, mixology, and station management as dictated by event requirements. Ensured impeccable event flow through proactive problem resolution and attentive guest service, maintaining the client's vision throughout each function.</p>
                 </div>
 
                 <!-- Job 6 -->
@@ -117,11 +94,7 @@
                         <span class="title-left">Volunteer</span>
                         <span class="title-right">2021 - 2022</span>
                     </h3>
-                    <p class="job_desc">Assisted financially disadvantaged clients with record expungement processes, driver's license reinstatement procedures, and general navigation of complex legal frameworks.
-                      Conducted thorough public records investigations and managed digital documentation systems to facilitate accessible legal aid services for underserved populations.
-                      Coordinated client intake processes by categorizing legal needs and directing individuals to appropriate specialized stations within the organization.
-                      Established and dismantled technological infrastructure for outreach events, ensuring functional computing and printing capabilities in variable environments.
-                    </p>
+                    <p class="job_desc">Assisted financially disadvantaged clients with record expungement processes, driver's license reinstatement procedures, and general navigation of complex legal frameworks. Conducted thorough public records investigations and managed digital documentation systems to facilitate accessible legal aid services for underserved populations. Coordinated client intake processes by categorizing legal needs and directing individuals to appropriate specialized stations within the organization. Established and dismantled technological infrastructure for outreach events, ensuring functional computing and printing capabilities in variable environments.</p>
                 </div>
                 <!-- Job 7 -->
                 <div class="divider">
@@ -130,10 +103,7 @@
                         <span class="title-left">Cinematographer and Editor</span>
                         <span class="title-right">2014 - 2018</span>
                     </h3>
-                    <p class="job_desc">Captured and produced documentary footage of significant life events utilizing professional cinematography techniques and equipment.
-                      Used advanced post-production methodologies through Adobe Creative Suite, primarily utilizing Premiere for core editing and After Effects for visual enhancements.
-                      Conceptualized, filmed, and edited commercial content for small business clients, translating product attributes into compelling visual narratives while adhering to brand guidelines and marketing objectives.
-                    </p>
+                    <p class="job_desc">Captured and produced documentary footage of significant life events utilizing professional cinematography techniques and equipment. Used advanced post-production methodologies through Adobe Creative Suite, primarily utilizing Premiere for core editing and After Effects for visual enhancements. Conceptualized, filmed, and edited commercial content for small business clients, translating product attributes into compelling visual narratives while adhering to brand guidelines and marketing objectives.</p>
                 </div>
             </div>
         </div>
@@ -146,7 +116,7 @@
             <p><strong>Customer Experience Excellence: </strong> Distinguished customer service background initiated at a Michelin-starred establishment, developing exceptional interpersonal communication skills, conflict resolution abilities, and attention to detail in high-pressure environments.</p>
             <p><strong>Hardware Engineering: </strong> Demonstrated technical expertise in computer hardware assembly and configuration, having successfully built and deployed nine custom computing systems ranging from Small Form Factor to Full Tower configurations, including comprehensive component selection, BIOS configuration, and operating system implementation.</p>
             <p><strong>System Administration: </strong> Proficient in Mac and Windows operating systems, including advanced troubleshooting, system maintenance protocols, and hardware diagnostic procedures.</p>
-            <p><strong>Productivity & Collaboration: </strong> Comprehensive knowledge of Microsoft Office Suite and Google Workspace environments, facilitating efficient documentation, project management, and team collaboration capabilities.</p>
+            <p><strong>Productivity & Collaboration: </strong> Comprehensive knowledge of Microsoft Office Suite and Google Workspace environments, facilitating efficient documentation, project management, and team collaboration.</p>
           </div>
         </div>
 
