--- a/index.html
+++ b/index.html
@@ -29,21 +29,12 @@
                 <h1 class="name_title">Austin Rosenthal</h1>
                 <h2 class="subtitle">Web Developer Resume & Portfolio</h2>
                 <p class="welcome_text">Welcome to my Website!
-                  I've created this space to showcase my journey and growing expertise as I transition into the technology field.
-                   My recent CompTIA A+ certification (2023) marks the beginning of this exciting path and demonstrates my ability to solve complex technical problems with confidence.
-                </p>
-                <p>This website itself represents my hands-on approach to learning—I built it from scratch using HTML and CSS as a practical project to strengthen my coding skills.
-                   Working through each element and styling challenge has been both educational and rewarding.
-                </p>
-                <p>My learning journey continues with preparation for my CompTIA Network+ certification, which I'm scheduled to complete in late April 2025.
-                   Following that milestone, I'll be pursuing the ISP2 System Security Certified Practitioner (SSCP) certification in the summer of 2025, reflecting my commitment to cybersecurity best practices.
-                </p>
-                <p>Beyond certifications, I'm developing my programming capabilities with beginner-level Python, HTML, and CSS.
-                   I'm enthusiastic about deepening my knowledge in these languages while expanding my toolkit to include JavaScript and C# in the near future.
-                </p>
-                <p>I believe in continuous growth and am passionate about applying these emerging skills to create innovative solutions.
-                   Feel free to explore my projects and follow my progress as I build my career in technology!
-                </p>
+                    I've created this space to showcase my journey and growing expertise as I transition into the technology field.
+                    My recent CompTIA A+ certification (2023) marks the beginning of this exciting path and demonstrates my ability to solve complex technical problems with confidence.</p>
+                <p>This website itself represents my hands-on approach to learning—I built it from scratch using HTML and CSS as a practical project to strengthen my coding skills. Working through each element and styling challenge has been both educational and rewarding.</p>
+                <p>My learning journey continues with preparation for my CompTIA Network+ certification, which I'm scheduled to complete in late April 2025. Following that milestone, I'll be pursuing the ISP2 System Security Certified Practitioner (SSCP) certification in the summer of 2025, reflecting my commitment to cybersecurity best practices.</p>
+                <p>Beyond certifications, I'm developing my programming capabilities with Python, HTML, and CSS. I'm enthusiastic about deepening my knowledge in these technologies while expanding my toolkit to include languages like JavaScript and C# in the near future.</p>
+                <p>I believe in continuous growth and am passionate about applying these emerging skills to create innovative solutions. Feel free to explore my projects and follow my progress as I build my career in technology!</p>
             </div>
         </div>
     </section>
