Updated About Job Description 8
added 8th Job description, as IT consultant

--- a/About.html
+++ b/About.html
@@ -42,7 +42,7 @@
                     <h2 class="job_title">OsteoStrong</h2>
                     <h3>
                         <span class="title-left">Lead Trainer</span>
-                        <span class="title-right">February 2024 - Present</span>
+                        <span class="title-right">February 2024 – Present</span>
                     </h3>
                     <p class="job_desc"> Curated published compelling weekly social media content to enhance brand visibility and client engagement. Executed comprehensive database management by standardizing client profiles, rectifying inconsistencies across multiple platforms, and optimizing the synchronization between Customer Relationship Management and scheduling systems. Maintained sophisticated studio equipment including BioCharger technology running on Linux Tux and Spectrum Loading Machines operating on Windows 10 platforms. Generated client acquisition through strategic cold outreach, conducted persuasive trial sessions, and demonstrated exceptional conversion rates through effective sales presentations.</p>
                 </div>
@@ -52,7 +52,7 @@
                     <h2 class="job_title">Body20</h2>
                     <h3>
                         <span class="title-left">EMS Certified Personal Trainer</span>
-                        <span class="title-right">June 2021- July 2023</span>
+                        <span class="title-right">June 2021 – July 2023</span>
                     </h3>
                     <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regiments. Performed maintenance and troubleshooting of WeimsPro Electric Magnetic Stimulation (EMS) full-body suits, including internal wiring replacement, electrode pad installation, and diagnostics to ensure optimal functionality. Consistently achieved monthly sales bonus targets during the initial six-month employment period, demonstrating superior client acquisition and retention abilities. Executed effective cold outreach, culminating in high-conversion trial sessions and successful membership closings.</p>
                 </div>
@@ -72,7 +72,7 @@
                     <h2 class="job_title">AE Finishing Renovations</h2>
                     <h3>
                         <span class="title-left">Project Manager</span>
-                        <span class="title-right">October 2020 - April 2022</span>
+                        <span class="title-right">October 2020 – April 2022</span>
                     </h3>
                     <p class="job_desc">Progressed from entry-level labor position to project oversight manager  role through proficiency and leadership capabilities. Instituted formalized documentation processes including detailed bidding systems, comprehensive project timelines, and material job costing and requisition protocols to enhance operational efficiency. Developed competitive written proposals that effectively secured new business opportunities while accurately representing project parameters and deliverables. Created strategic project schedules that optimized resource allocation and facilitated concurrent task execution, significantly improving completion timeframes. Assumed management responsibility for small-scale projects as the company's capacity expanded.</p>
                 </div>
@@ -92,7 +92,7 @@
                     <h2 class="job_title">Florida Justice Center (FLJC)</h2>
                     <h3>
                         <span class="title-left">Volunteer</span>
-                        <span class="title-right">2021 - 2022</span>
+                        <span class="title-right">2021 – 2022</span>
                     </h3>
                     <p class="job_desc">Assisted financially disadvantaged clients with record expungement processes, driver's license reinstatement procedures, and general navigation of complex legal frameworks. Conducted thorough public records investigations and managed digital documentation systems to facilitate accessible legal aid services for underserved populations. Coordinated client intake processes by categorizing legal needs and directing individuals to appropriate specialized stations within the organization. Established and dismantled technological infrastructure for outreach events, ensuring functional computing and printing capabilities in variable environments.</p>
                 </div>
@@ -101,9 +101,18 @@
                     <h2 class="job_title">Freelance Videographer</h2>
                     <h3>
                         <span class="title-left">Cinematographer and Editor</span>
-                        <span class="title-right">2014 - 2018</span>
+                        <span class="title-right">2014 – 2018</span>
                     </h3>
                     <p class="job_desc">Captured and produced documentary footage of significant life events utilizing professional cinematography techniques and equipment. Used advanced post-production methodologies through Adobe Creative Suite, primarily utilizing Premiere for core editing and After Effects for visual enhancements. Conceptualized, filmed, and edited commercial content for small business clients, translating product attributes into compelling visual narratives while adhering to brand guidelines and marketing objectives.</p>
+                </div>
+                <!-- Job 8 -->
+                <div class="divider">
+                    <h2 class="job_title">Independent Technical Support </h2>
+                    <h3>
+                        <span class="title-left">Technical Support</span>
+                        <span class="title-right"> November 2024 – Present</span>
+                    </h3>
+                    <p class="job_desc">Consulted with clients to assess technical needs and recommended customized computer solutions.  Conducted thorough diagnostics to troubleshoot and resolve hardware, software, and network connectivity problems.  Performed hardware installations including storage devices, RAM upgrades, and peripheral components. Developed and implemented organized file management systems to improve client workflow efficiency and reduce desktop clutter. </p>
                 </div>
             </div>
         </div>
