--- a/About.html
+++ b/About.html
@@ -30,7 +30,10 @@
             <h1 class="name_title">Austin Rosenthal</h1>
             <div class="title-divider"></div>
             <h2 class="name_title_sub">Resume</h2>
-            <p class="resume_desc">As a CompTIA A+ certified IT professional with hands-on experience in hardware engineering and system administration, I combine technical expertise with exceptional customer service skills developed in high-pressure environments. My practical programming knowledge in HTML, CSS, and Python is demonstrated through projects like this website, while my proficiency with professional software showcases my versatility. Currently advancing my technical credentials with upcoming Network+ and SSCP certifications.  I bring a proven ability to troubleshoot systems in company with my strong collaboration capabilities that make me instantly valuable to your team.</p>
+            <p class="resume_desc">CompTIA A+ and Network+ certified IT professional currently building hands-on experience in technical support roles.
+                I bring over a decade of proven customer service excellence from high-pressure environments to solve complex problems efficiently.
+                I am actively pursuing Security+ certification (scheduled for July 2025) and deeply committed to continuous growth in the technology field.
+                I'm eager to apply my technical knowledge, strong communication skills, and problem-solving abilities to contribute effectively in a IT environment.</p>
         </div>
 
         <!-- Work History Section -->
@@ -41,10 +44,13 @@
                 <div class="divider">
                     <h2 class="job_title">OsteoStrong</h2>
                     <h3>
-                        <span class="title-left">Lead Trainer</span>
+                        <span class="title-left">Coach / Operations Specialist</span>
                         <span class="title-right">February 2024 – Present</span>
                     </h3>
-                    <p class="job_desc"> Curated published compelling weekly social media content to enhance brand visibility and client engagement. Executed comprehensive database management by standardizing client profiles, rectifying inconsistencies across multiple platforms, and optimizing the synchronization between Customer Relationship Management and scheduling systems. Maintained sophisticated studio equipment including BioCharger technology running on Linux Tux and Spectrum Loading Machines operating on Windows 10 platforms. Generated client acquisition through strategic cold outreach, conducted persuasive trial sessions, and demonstrated exceptional conversion rates through effective sales presentations.</p>
+                    <p class="job_desc"> Curated published compelling weekly social media content to enhance brand visibility and client engagement.
+                        Executed comprehensive database management by standardizing client profiles, rectifying inconsistencies across multiple platforms, and optimizing the synchronization between Customer Relationship Management and scheduling systems.
+                        Maintained sophisticated studio equipment including BioCharger technology running on Linux Tux and Spectrum Loading Machines operating on Windows 10 platforms.
+                        Generated client acquisition through strategic cold outreach, conducted persuasive trial sessions, and demonstrated exceptional conversion rates through effective sales presentations.</p>
                 </div>
 
                 <!-- Job 8 -->
@@ -54,7 +60,10 @@
                         <span class="title-left">Technical Support</span>
                         <span class="title-right"> November 2024 – Present</span>
                     </h3>
-                    <p class="job_desc">Consulted with clients to assess technical needs and recommended customized computer solutions.  Conducted thorough diagnostics to troubleshoot and resolve hardware, software, and network connectivity problems.  Performed hardware installations including storage devices, RAM upgrades, and peripheral components. Developed and implemented organized file management systems to improve client workflow efficiency and reduce desktop clutter. </p>
+                    <p class="job_desc">Consulted with clients to assess technical needs and recommended customized computer solutions.
+                        Conducted thorough diagnostics to troubleshoot and resolve hardware, software, and network connectivity problems.
+                        Performed hardware installations including storage devices, RAM upgrades, and peripheral components.
+                        Developed and implemented organized file management systems to improve client workflow efficiency and reduce desktop clutter. </p>
                 </div>
 
                 <!-- Job 2 -->
@@ -64,7 +73,10 @@
                         <span class="title-left">EMS Certified Personal Trainer</span>
                         <span class="title-right">June 2021 – July 2023</span>
                     </h3>
-                    <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regiments. Performed maintenance and troubleshooting of WeimsPro Electric Magnetic Stimulation (EMS) full-body suits, including internal wiring replacement, electrode pad installation, and diagnostics to ensure optimal functionality. Consistently achieved monthly sales bonus targets during the initial six-month employment period, demonstrating superior client acquisition and retention abilities. Executed effective cold outreach, culminating in high-conversion trial sessions and successful membership closings.</p>
+                    <p class="job_desc">Managed a diverse client portfolio of approximately sixteen individuals per shift, documenting progress metrics, personalized objectives, and physical constraints to customize training regiments.
+                        Performed maintenance and troubleshooting of WeimsPro Electric Magnetic Stimulation (EMS) full-body suits, including internal wiring replacement, electrode pad installation, and diagnostics to ensure optimal functionality.
+                        Consistently achieved monthly sales bonus targets during the initial six-month employment period, demonstrating superior client acquisition and retention abilities.
+                        Executed effective cold outreach, culminating in high-conversion trial sessions and successful membership closings.</p>
                 </div>
 
                 <!-- Job 3 -->
@@ -74,7 +86,10 @@
                         <span class="title-left">Certified Personal Trainer</span>
                         <span class="title-right">August 2015 – August 2023</span>
                     </h3>
-                    <p class="job_desc">Functioned as a mobile fitness professional, transporting equipment inventories to client-convenient locations while maintaining workout quality and professional standards. Developed and implemented comprehensive, training programs tailored to individual client objectives, with specializations in hypertrophy, athletic performance, and strength conditioning. Cultivated an extensive client network primarily through referral-based marketing, maintaining high retention rates with 2-4 weekly sessions per client.  Designed strategic session packages with competitive pricing structures to maximize client retention and program adherence. Educated clients on exercise biomechanics, nutritional science principles, and injury prevention protocols to promote sustainable fitness outcomes.</p>
+                    <p class="job_desc">Functioned as a mobile fitness professional, transporting equipment inventories to client-convenient locations while maintaining workout quality and professional standards.
+                        Developed and implemented comprehensive, training programs tailored to individual client objectives, with specializations in hypertrophy, athletic performance, and strength conditioning.
+                        Cultivated an extensive client network primarily through referral-based marketing, maintaining high retention rates with 2-4 weekly sessions per client.
+                        Designed strategic session packages with competitive pricing structures to maximize client retention and program adherence. Educated clients on exercise biomechanics, nutritional science principles, and injury prevention protocols to promote sustainable fitness outcomes.</p>
                 </div>
 
                 <!-- Job 4 -->
@@ -84,7 +99,11 @@
                         <span class="title-left">Project Manager</span>
                         <span class="title-right">October 2020 – April 2022</span>
                     </h3>
-                    <p class="job_desc">Progressed from entry-level labor position to project oversight manager  role through proficiency and leadership capabilities. Instituted formalized documentation processes including detailed bidding systems, comprehensive project timelines, and material job costing and requisition protocols to enhance operational efficiency. Developed competitive written proposals that effectively secured new business opportunities while accurately representing project parameters and deliverables. Created strategic project schedules that optimized resource allocation and facilitated concurrent task execution, significantly improving completion timeframes. Assumed management responsibility for small-scale projects as the company's capacity expanded.</p>
+                    <p class="job_desc">Progressed from entry-level labor position to project oversight manager role through proficiency and leadership capabilities.
+                        Instituted formalized documentation processes including detailed bidding systems, comprehensive project timelines, and material job costing and requisition protocols to enhance operational efficiency.
+                        Developed competitive written proposals that effectively secured new business opportunities while accurately representing project parameters and deliverables.
+                        Created strategic project schedules that optimized resource allocation and facilitated concurrent task execution, significantly improving completion timeframes.
+                        Assumed management responsibility for small-scale projects as the company's capacity expanded.</p>
                 </div>
 
                 <!-- Job 5 -->
@@ -94,7 +113,9 @@
                         <span class="title-left">Event Staff</span>
                         <span class="title-right">2013 - 2016</span>
                     </h3>
-                    <p class="job_desc">Orchestrated seamless execution of social gatherings including weddings, birthdays, and Bar/Bat Mitzvahs and corporate events through meticulous venue preparation and strategic breakdown procedures. Demonstrated versatility by fulfilling multiple hospitality roles including service staff, mixology, and station management as dictated by event requirements. Ensured impeccable event flow through proactive problem resolution and attentive guest service, maintaining the client's vision throughout each function.</p>
+                    <p class="job_desc">Orchestrated seamless execution of social gatherings including weddings, birthdays, and Bar/Bat Mitzvahs and corporate events through meticulous venue preparation and strategic breakdown procedures.
+                        Demonstrated versatility by fulfilling multiple hospitality roles including service staff, mixology, and station management as dictated by event requirements.
+                        Ensured impeccable event flow through proactive problem resolution and attentive guest service, maintaining the client's vision throughout each function.</p>
                 </div>
 
                 <!-- Job 6 -->
@@ -104,7 +125,10 @@
                         <span class="title-left">Volunteer</span>
                         <span class="title-right">2021 – 2022</span>
                     </h3>
-                    <p class="job_desc">Assisted financially disadvantaged clients with record expungement processes, driver's license reinstatement procedures, and general navigation of complex legal frameworks. Conducted thorough public records investigations and managed digital documentation systems to facilitate accessible legal aid services for underserved populations. Coordinated client intake processes by categorizing legal needs and directing individuals to appropriate specialized stations within the organization. Established and dismantled technological infrastructure for outreach events, ensuring functional computing and printing capabilities in variable environments.</p>
+                    <p class="job_desc">Assisted financially disadvantaged clients with record expungement processes, driver's license reinstatement procedures, and general navigation of complex legal frameworks.
+                        Conducted thorough public records investigations and managed digital documentation systems to facilitate accessible legal aid services for underserved populations.
+                        Coordinated client intake processes by categorizing legal needs and directing individuals to appropriate specialized stations within the organization.
+                        Established and dismantled technological infrastructure for outreach events, ensuring functional computing and printing capabilities in variable environments.</p>
                 </div>
                 <!-- Job 7 -->
                 <div class="divider">
@@ -113,7 +137,9 @@
                         <span class="title-left">Cinematographer and Editor</span>
                         <span class="title-right">2014 – 2018</span>
                     </h3>
-                    <p class="job_desc">Captured and produced documentary footage of significant life events utilizing professional cinematography techniques and equipment. Used advanced post-production methodologies through Adobe Creative Suite, primarily utilizing Premiere for core editing and After Effects for visual enhancements. Conceptualized, filmed, and edited commercial content for small business clients, translating product attributes into compelling visual narratives while adhering to brand guidelines and marketing objectives.</p>
+                    <p class="job_desc">Captured and produced documentary footage of significant life events utilizing professional cinematography techniques and equipment.
+                        Used advanced post-production methodologies through Adobe Creative Suite, primarily utilizing Premiere for core editing and After Effects for visual enhancements.
+                        Conceptualized, filmed, and edited commercial content for small business clients, translating product attributes into compelling visual narratives while adhering to brand guidelines and marketing objectives.</p>
                 </div>
 
             </div>
@@ -137,7 +163,25 @@
             <div class="section-content certifications">
                 <div class="comptia-a">
                     <h3 class="cert-title">CompTIA A+ ce Certification (2023)</h3>
-                    <img src="img/Aplus%20Logo%20Certified%20CE.png" alt="CompTIA A+ Certification">
+                    <img src="img/CompTIA_A+.png" alt="CompTIA A+ Certification Badge">
+                </div>
+                <div class="section-content certifications">
+                  <div class="comptia-a">
+                    <h3 class="cert-title">CompTIA Network+ Certification (2025)</h3>
+                    <img src="img/CompTIA_N+.png" alt="CompTIA N+ Certification Badge">
+                  </div>
+                </div>
+                <div class="section-content certifications">
+                  <div class="comptia-a">
+                    <h3 class="cert-title">CompTIA IT Operations Specialist (2025)</h3>
+                    <img src="img/CompTIA_CIOS.png" alt="CompTIA's IT Operations Specialist Badge">
+                  </div>
+                </div>
+                <!--<div class="section-content certifications">
+                  <div class="comptia-a">
+                    <h3 class="cert-title">CompTIA Security+ (pending July 2025)</h3>
+                    <img src="img/CompTIA_CIOS.png" alt="CompTIA's IT Operations Specialist Badge">
+                  </div> -->
                 </div>
                 <div class="section-content certifications">
                   <div class="comptia-a">
@@ -148,11 +192,11 @@
                 <div class="section-content certifications">
                   <div class="comptia-a">
                     <h3 class="cert-title">American Health Care Academy CPR(Adult, Child, Infant) & AED Trained (2023)</h3>
-                    <img src="img/AHCApng.png" alt="NFPT Certification">
+                    <img src="img/AHCApng.png" alt="American Health Care Academy logo">
                   </div>
                 </div>
             </div>
         </div>
-    </div>
+
 </body>
 </html>
