Fixed Welcome/About Typo
Tweaked a few descriptions

--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
             <p class="resume_desc">CompTIA A+ and Network+ certified IT professional currently building hands-on experience in technical support roles.
                 I bring over a decade of proven customer service excellence from high-pressure environments to solve complex problems efficiently.
                 I am actively pursuing Security+ certification (scheduled for July 2025) and deeply committed to continuous growth in the technology field.
-                I'm eager to apply my technical knowledge, strong communication skills, and problem-solving abilities to contribute effectively in a IT environment.</p>
+                I'm eager to apply my technical knowledge, strong communication skills, and problem-solving abilities to contribute effectively in an IT environment.</p>
         </div>
 
         <!-- Work History Section -->
@@ -44,7 +44,7 @@
                 <div class="divider">
                     <h2 class="job_title">OsteoStrong</h2>
                     <h3>
-                        <span class="title-left">Coach / Operations Specialist</span>
+                        <span class="title-left">Trainer / Operations Specialist</span>
                         <span class="title-right">February 2024 – Present</span>
                     </h3>
                     <p class="job_desc"> Curated published compelling weekly social media content to enhance brand visibility and client engagement.
